Refactor package and file name

--- a/app/src/main/res/layout/fragment_sample_navigation.xml
+++ b/app/src/main/res/layout/fragment_sample_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SampleNavigationFragment">
+    tools:context=".primary.NavigationFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
