--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#1440E5</color>
     <color name="colorPrimaryDark">#1036C2</color>
     <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAdPlaceholder">#D8D8D8</color>
     <color name="colorTextDefault">#808080</color>
     <color name="colorTextFaded">#E8E8E8</color>
 </resources>
