--- a/app/src/main/res/layout/fragment_common_floating_window.xml
+++ b/app/src/main/res/layout/fragment_common_floating_window.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -94,18 +95,27 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/overlay_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#80000000"
+        tools:visibility="gone">
+
+    </FrameLayout>
+
     <Button
         android:id="@+id/button_load"
         android:layout_width="280dp"
         android:layout_height="36dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
         android:background="@drawable/button_bg_round"
         android:shadowColor="#000000"
         android:text="Show ads"
-        android:textColor="#FFFFFF"
         android:textAllCaps="false"
-        android:textSize="14dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="40dp" />
-    
+        android:textColor="#FFFFFF"
+        android:textSize="14dp" />
+
 </RelativeLayout>
