Read version name from dependency

--- a/app/src/main/res/layout/fragment_primary_navigation.xml
+++ b/app/src/main/res/layout/fragment_primary_navigation.xml
@@ -135,7 +135,8 @@
             android:paddingBottom="12dp"
             android:gravity="center"
             android:textColor="#b4b4b4"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            android:singleLine="false" />
 
     </LinearLayout>
 
