--- a/appier-sdk-sample/src/main/res/layout/fragment_common_list.xml
+++ b/appier-sdk-sample/src/main/res/layout/fragment_common_list.xml
@@ -16,6 +16,6 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorAdPlaceholder" />
+        android:background="#FFFFFF" />
 
 </FrameLayout>
