Update UI of listview item

--- a/appier-sdk-sample/src/main/res/layout/fragment_common_list.xml
+++ b/appier-sdk-sample/src/main/res/layout/fragment_common_list.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:drawSelectorOnTop="false"
         android:divider="@drawable/demo_list_divider"
-        android:background="@color/colorAdPlaceholder" />
+        android:background="#FFFFFF" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
