--- a/appier-sdk-sample/src/main/res/drawable/demo_list_row.xml
+++ b/appier-sdk-sample/src/main/res/drawable/demo_list_row.xml
@@ -1,24 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Background -->
-    <item android:gravity="fill_horizontal">
-        <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" />
-            <size android:height="72dp" />
-        </shape>
-    </item>
-
     <!-- Avatar -->
     <item
         android:gravity="left"
         android:top="16dp"
-        android:right="16dp"
-        android:bottom="16dp"
-        android:left="16dp">
+        android:left="16dp"
+        android:width="40dp"
+        android:height="40dp">
         <shape android:shape="oval">
             <solid android:color="#F2F2F2" />
-            <size android:width="40dp" android:height="40dp" />
         </shape>
     </item>
 
@@ -27,8 +18,8 @@
         android:gravity="left"
         android:top="12dp"
         android:right="208dp"
-        android:bottom="48dp"
-        android:left="72dp">
+        android:left="72dp"
+        android:height="12dp">
         <shape android:shape="rectangle">
             <solid android:color="#F2F2F2" />
         </shape>
@@ -39,8 +30,8 @@
         android:gravity="left"
         android:top="32dp"
         android:right="28dp"
-        android:bottom="28dp"
-        android:left="72dp">
+        android:left="72dp"
+        android:height="12dp">
         <shape android:shape="rectangle">
             <solid android:color="#F2F2F2" />
         </shape>
@@ -51,8 +42,9 @@
         android:gravity="left"
         android:top="48dp"
         android:right="68dp"
-        android:bottom="12dp"
-        android:left="72dp">
+        android:bottom="16dp"
+        android:left="72dp"
+        android:height="12dp">
         <shape android:shape="rectangle">
             <solid android:color="#F2F2F2" />
         </shape>
