--- a/appier-sdk-sample/src/main/res/layout/fragment_primary_navigation.xml
+++ b/appier-sdk-sample/src/main/res/layout/fragment_primary_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.MainFragment">
+    tools:context=".fragment.navigation.SdkNavigationFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -38,7 +38,7 @@
 
         </LinearLayout>
 
-        <com.appier.android.sample.secondary.NavigationListView
+        <com.appier.android.sample.common.NavigationListView
             android:id="@+id/secondary_nav_interstitial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -76,7 +76,7 @@
 
         </LinearLayout>
 
-        <com.appier.android.sample.secondary.NavigationListView
+        <com.appier.android.sample.common.NavigationListView
             android:id="@+id/secondary_nav_banner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -114,7 +114,7 @@
 
         </LinearLayout>
 
-        <com.appier.android.sample.secondary.NavigationListView
+        <com.appier.android.sample.common.NavigationListView
             android:id="@+id/secondary_nav_native"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
