--- a/appier-sdk-sample/src/main/res/layout/fragment_retry.xml
+++ b/appier-sdk-sample/src/main/res/layout/fragment_retry.xml
@@ -57,6 +57,7 @@
             android:background="@drawable/button_bg_round"
             android:shadowColor="#000000"
             android:text="Try Again"
+            android:textSize="14sp"
             android:textAllCaps="false"
             android:textColor="#FFFFFF" />
 
