--- a/appier-sdk-sample/src/main/res/layout/fragment_primary_navigation.xml
+++ b/appier-sdk-sample/src/main/res/layout/fragment_primary_navigation.xml
@@ -12,6 +12,27 @@
 
         <!-- Interstitial -->
 
+        <RelativeLayout
+            android:id="@+id/button_group_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center_horizontal|center_vertical"
+            android:visibility="visible"
+            tools:visibility="visible">
+
+            <Button
+                android:id="@+id/button_predict"
+                android:layout_width="280dp"
+                android:layout_height="36dp"
+                android:background="@drawable/button_bg_round"
+                android:text="Predict"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
